# gfriedri-em-alignment

./: .gitignore  LICENSE  README.md  Ray for parallelization.ipynb  SOFIMA Stitching.ipynb  Untitled.ipynb  generate_tile_id_map.py  generate_tile_id_map_from_grid.py  pyproject.toml  setup.cfg  stitch_section.config  stitch_section.py  tox.ini
.github/workflows/: test_and_deploy.yml
config_example/: align_sec.json  render_volume.json
em_alignment/: generate_tile_id_map.py  generate_tile_id_map_from_grid.py  stitch_section.py
em_alignment/sbem/experiment/: Experiment.py  __init__.py  parse_utils.py
sbem/experiment/: Experiment.py  parse_utils.py
sbem/record/: SectionRecord.py
sbem/tile_stitching/: sofima_utils.py
scripts/: convert_volume_format.py  render_volume.py  run_add_sample.py  run_add_sections.py  run_check_missing_sections.py  run_create_experiment.py  run_create_sample.py  run_multiscale_volume.py  run_render_volume.py  run_roughly_align_section.py  run_roughly_align_sections.py  run_tile_registration.py  run_tile_registration_prefect.py  run_warp_and_save.py  run_warp_and_save_prefect.py  slurm_test.py  slurm_tile_registration.py  tile_registration.config
src/: __init__.py
src/sbem/record/: Author.py  (+8 more)
tests/: test_stitch_section.py
tests/experiment/: test_experiment.py  test_experiment_v2.py  test_parse_utils.py
tests/record/: test_Author.py  test_BlockRecord.py  test_Citation.py  test_Info.py  test_ReferenceMixin.py  test_Sample.py  test_Section.py  test_SectionRecord.py  test_Tile.py  test_TileRecord.py
tests/storage/: test_Volume.py
(+29 files in other folders)
