[metadata]
name = em_alignment
description = Orchestration of EM alignment tools.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fmi-basel/gfriedri-em-alignment
author = Tomas Gancarcik, Bo Hu, Tim-Oliver Buchholz
author_email = tim-oliver.buchholz@fmi.ch
license = Apache-2.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved :: Apache-2.0
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker = https://github.com/fmi-basel/gfriedri-em-alignment/issues
    Documentation = https://github.com/fmi-basel/gfriedri-em-alignment#README.md
    Source Code = https://github.com/fmi-basel/gfriedri-em-alignment
    User Support = https://github.com/fmi-basel/gfriedri-em-alignment/issues

[options]
packages = find:
install_requires =
    numpy
    pandas
    scikit-image
    sofima
    tqdm
python_requires = >=3.7
setup_requires =
    setuptools-scm

[options.packages.find]
where = src
